--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,16 @@ h1 {
 
 h2 {
   font-size: 1.75rem;
-  color: #7c3c21;
+  color: dimgray;
+}
+
+img {
+  border-radius: 50%;
+  margin: 1rem 0.75rem 1rem 0;
+}
+
+span {
+  color: dimgray;
 }
 
 .form-control {
@@ -40,7 +49,7 @@ h2 {
   margin-left: 15rem;
   margin-right: 0.5rem;
   width: 40%;
-  padding: 3rem;
+  padding: 1rem;
 }
 
 .statistics-div {
