--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ span {
   margin-right: 0.5rem;
   width: 40%;
   padding: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .stats-div {
@@ -57,6 +58,7 @@ span {
   margin-left: 0.5rem;
   margin-right: 15rem;
   padding: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .stats-list {
